[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialog_plugin/Editor/toolbar/ToolBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialog_plugin/Editor/EditorView.gd" type="Script" id=9]

[node name="EditorView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 22.0
margin_right = -4.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolBar" parent="." instance=ExtResource( 1 )]
margin_left = 352.0
margin_right = -366.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 153, 0 )

[connection signal="character_selected" from="ToolBar" to="." method="_on_ToolBar_character_selected"]
[connection signal="timeline_selected" from="ToolBar" to="." method="_on_ToolBar_timeline_selected"]
